--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.4.0
 certifi==2024.6.2
+charset-normalizer==3.3.2
 click==8.1.7
 dnspython==2.6.1
 email_validator==2.2.0
@@ -18,12 +19,14 @@ MarkupSafe==2.1.5
 mdurl==0.1.2
 numpy==2.0.0
 orjson==3.10.5
+psutil==6.0.0
 pydantic==2.7.4
 pydantic_core==2.18.4
 Pygments==2.18.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+requests==2.32.3
 rich==13.7.1
 shellingham==1.5.4
 sniffio==1.3.1
@@ -31,6 +34,7 @@ starlette==0.37.2
 typer==0.12.3
 typing_extensions==4.12.2
 ujson==5.10.0
+urllib3==2.2.2
 uvicorn==0.30.1
 uvloop==0.19.0
 watchfiles==0.22.0
